--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,25 +5,27 @@
 <table>
   <thead>
     <tr>
-      <th>Email address</th>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Password hash</th>
-      <th colspan="3"></th>
+      <th class="table-dark bg-primary">Name</th>
+      <th class="table-dark bg-primary">Email Address</th>
+      <th class="table-dark bg-primary" colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= link_to user.first_name + ' ' + user.last_name, user%></td>
         <td><%= user.email_address %></td>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.password_hash %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <% if logged_in? %>
+          <% if current_user == user %>
+            <td><%= link_to 'Edit Profile', edit_user_path(user) %></td>
+            <td><%= link_to 'Delete Account', user, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+            <td></td>
+          <% end %>
+        <% else %>
+          <td></td>
+          <td></td>
+        <% end %>    
     <% end %>
   </tbody>
 </table>
